fix horizontal scroll behaviour

--- a/src/app/components/Board/Board.scss
+++ b/src/app/components/Board/Board.scss
@@ -211,6 +211,7 @@ $list-margin: 8px;
   border-radius: 3px;
   margin: 0 5px 0 5px;
   transition: background 0.2s;
+  flex-shrink: 0;
 }
 
 .add-list-button:hover,
